# spamshield

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yaml  publish-dataset.yaml  release-dataset.yaml  train.yaml
scripts/: example_curl.sh  hash_api_key.py  request.py
src/spamshield/: __init__.py
src/spamshield/api/: auth.py  config.py  limiting.py  logs.py  main.py  metrics.py  middleware.py  model.py  routes.py  schemas.py  service.py  static_config.py
src/spamshield/app/: auth.py  config.py  logs.py  main.py  metrics.py  middleware.py  service.py
src/spamshield/client/: client.py
src/spamshield/common/: signature.py
src/spamshield/core/: signature.py
src/spamshield/model/: data.py  metrics.py  pipeline.py  plots.py  scoring.py  training.py  types.py
src/spamshield/training/: data.py  metrics.py  pipeline.py  plots.py  training.py
tests/: test_api.py  test_foo.py
