[project]
name = "spamshield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Nicolas Abelanet", email = "mail@nicolasabelanet.com" }]
requires-python = ">=3.14"
dependencies = [
  "fastapi[standard]>=0.119.0",
  "joblib>=1.5.2",
  "prometheus-client>=0.23.1",
  "pydantic>=2.12.3",
  "pydantic-settings>=2.11.0",
  "requests>=2.32.5",
  "scikit-learn>=1.7.2",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
training = [
  "numpy>=2.3.4",
  "kagglehub>=0.3.13",
  "pandas>=2.3.3",
  "matplotlib>=3.10.7",
]

client = ["requests>=2.32.5"]

[project.scripts]
spamsheild-api = "spamshield:main"
train-spam-model = "spamshield.training.training:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pre-commit>=4.3.0", "pytest>=8.4.2", "ruff>=0.14.2"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
extend-select = [
  "F",   # Pyflakes rules
  "W",   # PyCodeStyle warnings
  "E",   # PyCodeStyle errors
  "I",   # Sort imports properly
  "UP",  # Warn if certain things can changed due to newer Python versions
  "C4",  # Catch incorrect use of comprehensions, dict, list, etc
  "ISC", # Good use of string concatenation
  "ICN", # Use common import conventions
  "RET", # Good return practices
  "SIM", # Common simplification rules
  "TID", # Some good import practices
  "TC",  # Enforce importing certain types in a TYPE_CHECKING block
  "PTH", # Use pathlib instead of os.path
  "TD",  # Be diligent with TODO comments
]
