[project]
name = "spamshield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Nicolas Abelanet", email = "mail@nicolasabelanet.com" }]
requires-python = ">=3.14"
dependencies = [
  "fastapi[standard]>=0.119.0",
  "joblib>=1.5.2",
  "prometheus-client>=0.23.1",
  "pydantic>=2.12.3",
  "pydantic-settings>=2.11.0",
  "requests>=2.32.5",
  "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
training = [
  "numpy>=2.3.4",
  "kagglehub>=0.3.13",
  "pandas>=2.3.3",
  "matplotlib>=3.10.7",
]

client = ["httpx>=0.28.1"]

[project.scripts]
train-spam-model = "spamshield.model.training:main"
create-spam-dataset = "spamshield.model.data:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
addopts = "--cov=spamshield --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["src"]
